# DSJSON-PY

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-tests.yml
docs/: IMPLEMENTATION.md  TESTING.md  USAGE.md
dsjson/: __init__.py  core.py
examples/: columns_vs.csv  example.py  vs.csv
tests/: test_core.py
