[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dsjson"
version = "1.1"
description = "A Python package to convert tabular data and metadata into CDISC Dataset-JSON v1.1 format."
readme = "README.md"
authors = [
  { name = "Trinath Panda", email = "pandatrinath1999@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0"
]

[project.optional-dependencies]
test = [
    "pytest"
]

[tool.setuptools]
packages = ["dsjson"]

[tool.setuptools.package-data]
dsjson = []

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
